added transaction APIs
